--- a/Parte 1 - Basic/aula15/index.html
+++ b/Parte 1 - Basic/aula15/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicios</title>
+    <title>Exercicio</title>
 </head>
 <body>
-    <H1>Calculadora Aleatória</H1>
     <section>
-        <h1>O seu número é <span id="numero-titulo">_</span> </h1>
-        <div id="texto"></div>
+        <h1>O seu número é <span id="numero-titulo">24</span></h1>
+        <div id="texto"> </div>
+
+        <p> A Raiz quadrada é: <span id="raiz">_0_</span></p>
     </section>
-    
+
     <script src="node.js"></script>
 </body>
 </html>
