--- a/Parte 1 - Basic/aula15/index.html
+++ b/Parte 1 - Basic/aula15/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio</title>
+    <title>Exercicios</title>
 </head>
 <body>
-    <section>
-        <h1>O seu número é <span id="numero-titulo">24</span></h1>
-        <div id="texto"> </div>
 
-        <p> A Raiz quadrada é: <span id="raiz">_0_</span></p>
-    </section>
-
+    <h3>O número é <span id="num">___</span></h3>
     <script src="node.js"></script>
 </body>
 </html>
