--- a/Projeto-CRUD/modal.html
+++ b/Projeto-CRUD/modal.html
@@ -44,12 +44,15 @@
             <div class="nasc">
                 <label for="nasc" id="data-nasc">DATA DE NASCIMENTO</label>
                 <input type="date" name="nasc" required>
-                <label for="nasc">MM//DD/YYYY</label>
+                <label for="nasc"><p>MM//DD/YYYY</p></label>
             <div class="campo">
-                <label for="email">Email</label>
+                <label for="email"><p>EMAIL</p></label>
                 <input type="text" id="email" placeholder="robertocarlos.oliveira@gmail.com" required>
             </div>
-            <input type="submit" value="Enviar">
+            
+            <div class="enviar">
+                <input type="submit" value="Enviar">
+            </div>
         </form>
     </dialog>
 
