--- a/Projeto-CRUD/index.html
+++ b/Projeto-CRUD/index.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="./styles/desktop/home.css">
     <link rel="stylesheet" href="./styles/android/home.css">
+    <!-- Modal -->
 
 </head>
 <body>
@@ -58,7 +59,6 @@
             </div>
         </div>
     </section>
-
     <!-- Bootstrap Lib-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
