add: CRUD Styles

--- a/Projeto-CRUD/index.html
+++ b/Projeto-CRUD/index.html
@@ -60,6 +60,35 @@
                                 </div>
                             </td>
                         </tr>
+                        <tr>
+                            <td class="id">1</td>
+                            <td class="nome">WellingtonRaioLas</td>
+                            <td class="sobrenome">MinervaAlve</td>
+                            <td class="gender">M</td>
+                            <td class="datanasc">20-06-2005</td>
+                            <td class="email">superetro85@gmail.com</td>
+                            <td class="actions">
+                                <div class="UR">
+                                    <i class="fa-solid fa-pen-to-square" id="edit"></i>
+                                    <i class="fa-solid fa-trash" id="delete"></i>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="id">1</td>
+                            <td class="nome">WellingtonRaioLas</td>
+                            <td class="sobrenome">MinervaAlve</td>
+                            <td class="gender">M</td>
+                            <td class="datanasc">20-06-2005</td>
+                            <td class="email">superetro85@gmail.com</td>
+                            <td class="actions">
+                                <div class="UR">
+                                    <i class="fa-solid fa-pen-to-square" id="edit"></i>
+                                    <i class="fa-solid fa-trash" id="delete"></i>
+                                </div>
+                            </td>
+                        </tr>
+                        
                         
                     </tbody>
                 </table>
