--- a/Parte 2 - Logica/aula26 - TudoAqui/imc/imc/assets/index.html
+++ b/Parte 2 - Logica/aula26 - TudoAqui/imc/imc/assets/index.html
@@ -17,6 +17,17 @@
         <form action="#">
             <label for="input-teste">Label teste #1</label>
             <input type="text" id="input-teste-2">
+
+            <label for="input-teste">Label teste #1</label>
+            <input type="text" id="input-teste-2">
+
+            <label for="input-teste">Label teste #1</label>
+            <input type="text" id="input-teste-2">
+
+            <label for="input-teste">Label teste #1</label>
+            <input type="text" id="input-teste-2">
+            
+            <button>Enviar</button>
         </form>
     </section>
 
