--- a/Parte 2 - Logica/aula26 - TudoAqui/imc copy/imc/assets/index.html
+++ b/Parte 2 - Logica/aula26 - TudoAqui/imc copy/imc/assets/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modelo</title>
+    <title>Calcule seu IMC</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,12 +16,10 @@
             <input type="text" id="peso" name="peso">
             <label for="altura">Altura</label>
             <input type="text" id="altura" name="altura">
-
             <button type="submit">Enviar</button>
         </form>
 
         <div id="resultado"></div>
-
     </section>
 
     <script src="./js/main.js"></script>
