--- a/Projeto-CRUD/index.html
+++ b/Projeto-CRUD/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CRUD</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Bootstrap -->
+    <link async href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
+    <!-- Styles -->
     <link rel="stylesheet" href="./styles/desktop/home.css">
     <link rel="stylesheet" href="./styles/android/home.css">
     <!-- Modal -->
-     <link rel="stylesheet" href="./modal/modal.css">
+    <link rel="stylesheet" href="./modal/modal.css">
 
-         <!-- Bootstrap Lib-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap Lib-->
+    <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -56,7 +61,7 @@
                             <th>ACTIONS</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="table">
                         <tr>
                             <td data-title="id" class="id">1</td>
                             <td data-title="nome" class="nome">WellingtonRaioLas</td>
@@ -71,34 +76,7 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                            <td data-title="id" class="id">1</td>
-                            <td data-title="nome" class="nome">WellingtonRaioLas</td>
-                            <td data-title="sobrenome" class="sobrenome">MinervaAlve</td>
-                            <td data-title="gender" class="gender">M</td>
-                            <td data-title="datanasc" class="datanasc">20-06-2005</td>
-                            <td data-title="email" class="email">superetro85@gmail.com</td>
-                            <td data-title="actions"class="actions">
-                                <div class="UR">
-                                    <i class="fa-solid fa-pen-to-square" id="edit"></i>
-                                    <i class="fa-solid fa-trash" id="delete"></i>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="id" class="id">1</td>
-                            <td data-title="nome" class="nome">WellingtonRaioLas</td>
-                            <td data-title="sobrenome" class="sobrenome">MinervaAlve</td>
-                            <td data-title="gender" class="gender">M</td>
-                            <td data-title="datanasc" class="datanasc">20-06-2005</td>
-                            <td data-title="email" class="email">superetro85@gmail.com</td>
-                            <td data-title="actions"class="actions">
-                                <div class="UR">
-                                    <i class="fa-solid fa-pen-to-square" id="edit"></i>
-                                    <i class="fa-solid fa-trash" id="delete"></i>
-                                </div>
-                            </td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
@@ -120,7 +98,10 @@
         </div>
 
         <!--Formulario-->
-        <form id="formulario">
+        <form id="formulario" method="post" action="/" novalidate>
+
+            <div id="validate"></div>
+
             <div class="campo">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" placeholder="David" required>
@@ -159,10 +140,10 @@
 
     <!-- Script Javascript Modal-->
     <script async src="./js/modal.js"></script>
-    <!-- Script Armazenar dados no LocalStorage-->
-     <script async src="./js/armazenardados.js"></script>
+    <!-- CRUD Script-->
+    <script async src="./js/crud.js"></script>
 
     <!-- Flatcon-->
-    <script src="https://kit.fontawesome.com/44d91e0751.js" crossorigin="anonymous"></script>
+    <script async src="https://kit.fontawesome.com/44d91e0751.js" crossorigin="anonymous"></script>
 </body>
 </html>
